--- a/style.css
+++ b/style.css
@@ -41,11 +41,14 @@ main {
 }
 
 form {
-    position: relative;
-    top: 150px;
     margin: 20px -20px;
+    padding-bottom: 20px;
 }
 
 #display-info {
     margin: 20px;
+}
+
+ul {
+    margin-bottom: 20px;
 }
